syntax = "proto3";

package news.v1;

option go_package = "gis/polygon/api/news/v1;pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/httpbody.proto";

// NewsAttachment — метаданные вложения (файла), прикреплённого к новости.
// id — идентификатор вложения; url — публичный URL; content_type — MIME тип; size — размер в байтах.
message NewsAttachment {
  string id = 1;
  string url = 3;
  string content_type = 4;
  int64 size = 5;
}

// News — сущность новости с основными отображаемыми полями.
// is_published — признак публикации; published_at — время публикации; updated_at — время последнего изменения.
message News {
  string id = 1;
  string title = 2;
  string cover_url = 3;
  string short_description = 4;
  string content = 5;
  bool is_published = 6;
  google.protobuf.Timestamp published_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// GetNewsListRequest — параметры пагинации и фильтрации списка новостей.
// published_only — если true, возвращаются только опубликованные новости.
message GetNewsListRequest {
  int32 page = 1;
  int32 page_size = 2;
  bool published_only = 3;
}

// GetNewsListResponse — страница новостей с метаданными пагинации.
// total_count — общее количество подходящих новостей.
message GetNewsListResponse {
  repeated News news = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// GetNewsRequest — запрос одной новости по идентификатору.
message GetNewsRequest {
  string id = 1;
}

// GetNewsResponse — ответ с данными новости.
message GetNewsResponse {
  News news = 1;
}

// CreateNewsRequest — создание новой новости.
// title — заголовок; short_description — краткое описание; cover_url — URL обложки (опционально); content — содержимое (HTML/Markdown).
message CreateNewsRequest {
  string title = 1;
  string short_description = 2;
  string cover_url = 3;
  string content = 4;
}

// CreateNewsResponse — ответ с созданной новостью.
message CreateNewsResponse {
  News news = 1;
}

// UpdateNewsRequest — частичное обновление новости по id.
// Передавайте только поля, которые требуется изменить.
message UpdateNewsRequest {
  string id = 1;
  string title = 2;
  string short_description = 3;
  string cover_url = 4;
  string content = 5;
}

// UpdateNewsResponse — ответ с обновлённой новостью.
message UpdateNewsResponse {
  News news = 1;
}

// DeleteNewsRequest — удаление новости по id.
message DeleteNewsRequest {
  string id = 1;
}

// PublishNewsRequest — публикация новости.
message PublishNewsRequest {
  string id = 1;
}

// PublishNewsResponse — ответ с опубликованной новостью.
message PublishNewsResponse {
  News news = 1;
}

// UnpublishNewsRequest — снятие новости с публикации.
message UnpublishNewsRequest {
  string id = 1;
}

// UnpublishNewsResponse — ответ с новостью после снятия с публикации.
message UnpublishNewsResponse {
  News news = 1;
}

// UploadAttachmentRequest — запрос загрузки вложения (одиночный режим).
message UploadAttachmentRequest {
  google.api.HttpBody file = 1;
}

// UploadAttachmentResponse — ответ с метаданными загруженного вложения.
message UploadAttachmentResponse {
  NewsAttachment attachment = 1;
}

// DownloadAttachmentRequest — запрос скачивания вложения по id.
message DownloadAttachmentRequest {
  string id = 1;
}

// DeleteAttachmentRequest — удаление вложения по идентификатору.
message DeleteAttachmentRequest {
  string attachment_id = 1;
}

// GetAttachmentsRequest — пакетное получение метаданных вложений.
message GetAttachmentsRequest {
  repeated string attachment_ids = 1;
}

// GetAttachmentsResponse — ответ со списком вложений.
message GetAttachmentsResponse {
  repeated NewsAttachment attachments = 1;
}

// NewsClientService — публичные операции для конечных пользователей.
service NewsClientService {
  // GetNewsList — получить список опубликованных (или всех, если published_only=false) новостей с пагинацией.
  rpc GetNewsList(GetNewsListRequest) returns (GetNewsListResponse) {
    option (google.api.http) = {
      get: "/v1/news"
    };
  }

  // GetNews — получить одну опубликованную новость по id.
  rpc GetNews(GetNewsRequest) returns (GetNewsResponse) {
    option (google.api.http) = {
      get: "/v1/news/{id}"
    };
  }

  // DownloadAttachment — скачать бинарное содержимое вложения новости.
  rpc DownloadAttachment(DownloadAttachmentRequest) returns (stream google.api.HttpBody) {
    option (google.api.http) = {
      get: "/v1/news/attachments/{id}"
    };
  }
}

// NewsAdminService — административные операции управления новостями и вложениями.
service NewsAdminService {
  // CreateNews — создать новость (по умолчанию не опубликована).
  rpc CreateNews(CreateNewsRequest) returns (CreateNewsResponse) {
    option (google.api.http) = {
      post: "/v1/admin/news"
      body: "*"
    };
  }

  // UpdateNews — частично обновить новость по id.
  rpc UpdateNews(UpdateNewsRequest) returns (UpdateNewsResponse) {
    option (google.api.http) = {
      patch: "/v1/admin/news/{id}"
      body: "*"
    };
  }

  // DeleteNews — удалить новость по id.
  rpc DeleteNews(DeleteNewsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/admin/news/{id}"
    };
  }

  // PublishNews — опубликовать новость (становится доступна клиентскому сервису).
  rpc PublishNews(PublishNewsRequest) returns (PublishNewsResponse) {
    option (google.api.http) = {
      post: "/v1/admin/news/{id}/publish"
      body: "*"
    };
  }

  // UnpublishNews — снять новость с публикации.
  rpc UnpublishNews(UnpublishNewsRequest) returns (UnpublishNewsResponse) {
    option (google.api.http) = {
      post: "/v1/admin/news/{id}/unpublish"
      body: "*"
    };
  }

  // GetAllNewsList — получить список новостей (включая черновики) с параметрами пагинации.
  rpc GetAllNewsList(GetNewsListRequest) returns (GetNewsListResponse) {
    option (google.api.http) = {
      get: "/v1/admin/news"
    };
  }

  // GetAnyNews — получить новость независимо от статуса публикации.
  rpc GetAnyNews(GetNewsRequest) returns (GetNewsResponse) {
    option (google.api.http) = {
      get: "/v1/admin/news/{id}"
    };
  }

  // UploadAttachment — загрузить вложение (принимает в ключ file в form-data).
  rpc UploadAttachment(stream google.api.HttpBody) returns (UploadAttachmentResponse) {
    option (google.api.http) = {
      post: "/v1/admin/attachments/upload"
      body: "*"
    };
  }

  // DeleteAttachment — удалить вложение по его идентификатору.
  rpc DeleteAttachment(DeleteAttachmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/admin/attachments/{attachment_id}"
    };
  }

  // GetAttachments — получить метаданные нескольких вложений по списку id.
  rpc GetAttachments(GetAttachmentsRequest) returns (GetAttachmentsResponse) {
    option (google.api.http) = {
      post: "/v1/admin/attachments/batch"
      body: "*"
    };
  }
}